src/th3.yaml
apiVersion: v1
kind: Service
metadata:
  name: th3
  labels:
    app: th3
    service: th3
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: th3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: th3-v1
  labels:
    app: th3
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: th3
      version: v1
  template:
    metadata:
      labels:
        app: th3
        version: v1
    spec:
      containers:
      - name: th3
        image: th3:v0.0.1
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: Never # we build directly to Docker Engine inside Minikube
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: th3-v2
  labels:
    app: th3
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: th3
      version: v2
  template:
    metadata:
      labels:
        app: th3
        version: v2
    spec:
      containers:
      - name: th3
        image: th3:v0.0.2
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: Never # we build directly to Docker Engine inside Minikube
        ports:
        - containerPort: 8080
