src/th3-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: th3-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: th3
spec:
  host: th3
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: th3
spec:
  hosts:
  - "*"
  gateways:
  - th3-gateway
  http:
  - route:
    - destination:
        host: th3
        port:
          number: 8080
        subset: v1
      weight: 0
    - destination:
        host: th3
        port:
          number: 8080
        subset: v2
      weight: 100
